# quran-muaalem

./: .env  .gitignore  CLAUDE.md  DATASET.md  FINAL_REPORT.md  FINE_TUNING_GUIDE.md  MODEL.md  MSA_FINETUNING_GUIDE.md  MSA_QUICK_START.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_EN.md  README_MSA_FINETUNING.md  RUNNING.md  SETUP_MSA_TRAINING.md  TRAINING.md  TRAINING_INSTRUCTIONS.md  TRAINING_STATUS.md  TRAINING_TEST_RESULTS.md  debug_shapes.py  docker-compose.yml  engine_main.py  pyproject.toml  test_quick_train.py  test_training_simple.py  train_msa_cpu.py  train_msa_simple.py
.claude/: settings.local.json
engine/triton/: Dockerfile  entry-level.sh  entrypoint.sh
engine/triton/configs/: config_bf16.pbtxt  config_fp16.pbtxt
scripts/: to_jit_cpu.py  to_jit_gpu.py
src/quran_muaalem/app/: serve.py
src/quran_muaalem/data/: __init__.py  msa_dataset.py  prepare_common_voice.py
src/quran_muaalem/engine/: __init__.py  main.py  model.py  postprocessing.py  preprocessing.py  serve.py  server.py  types.py
src/quran_muaalem/modeling/: adapt_model_for_msa.py  msa_tokenizer.py  msa_vocab.py
src/quran_muaalem/msa/: __init__.py  api.py  compare.py  inference.py  phonemize.py  settings.py  ui.py
src/quran_muaalem/training/: __init__.py  train_msa.py
tests/: test_jit_gpu.py  test_ray_async.py  test_triton.py
