# main docs of setup tools: https://setuptools.pypa.io/en/latest/userguide/quickstart.html
# pypip tutoral: https://packaging.python.org/en/latest/tutorials/packaging-projects/
# Video Tutorial: https://www.youtube.com/watch?v=v6tALyc4C10
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
license = "MIT"
name = "quran-muaalem"
version = "0.1.0"
authors = [
  { name="Abdullah", email="abdullahamlyossef@gmail.com" },
]
description = "Quran Phonetic Script with addional quarnic utils"
readme = "README.md"
dependencies = [
    "diff-match-patch>=20241021",
    "librosa>=0.11.0",
    "litserve>=0.2.17",
    "numpy>=2.2.6",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.20",
    "quran-transcript>=0.5.2",
    "rich>=14.1.0",
    "torch>=2.4.0",
    "transformers>=4.55.0",
]
requires-python = ">=3.11,<3.15"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]


# Optional dependencies
[project.optional-dependencies]

test = [
  "librosa>=0.11.0",
  "numba>=0.61.2",
  "pytest",
]
ui = [
    "gradio>=5.43.1",
    "httpx>=0.28.1",
    "librosa>=0.11.0",
    "numba>=0.61.2",
    "moviepy>=2.2.1",
]
engine = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "litserve>=0.2.17",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
]
training = [
    "soundfile>=0.12.1",
    "librosa>=0.11.0",
    "tqdm>=4.66.0",
    "accelerate>=0.28.0",
]


[project.scripts]
quran-muaalem-ui = "quran_muaalem.gradio_app:main"
quran-muaalem-engine = "quran_muaalem.engine.main:main"
quran-muaalem-app = "quran_muaalem.app:main"
quran-muaalem-msa-api = "quran_muaalem.msa.api:main"
quran-muaalem-msa-ui = "quran_muaalem.msa.ui:main"

[project.urls]
Homepage = "https://github.com/obadx/quran-muaalem"
Issues = "https://github.com/obadx/quran-muaalem/issues"

# for addint data: https://setuptools.pypa.io/en/latest/userguide/datafiles.html#package-data
# [tool.setuptools.package-data]
# quran_transcript = ["quran-script/*"]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }
